[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-hit-breaks"
version = "1.0.0"
description = "Emergency cost control for AWS accounts - pause all services without deletion"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AWS Break CLI Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "boto3>=1.34.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "hypothesis>=6.90.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "moto>=4.2.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
"aws-hit-breaks" = "aws_hit_breaks.cli.main:main"

[project.urls]
Homepage = "https://github.com/aws-break-cli/aws-hit-breaks"
Repository = "https://github.com/aws-break-cli/aws-hit-breaks"
Issues = "https://github.com/aws-break-cli/aws-hit-breaks/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["aws_hit_breaks*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=aws_hit_breaks --cov-report=term-missing --cov-report=html"